add a more separt

--- a/排序算法之归并排序.md
+++ b/排序算法之归并排序.md
@@ -18,6 +18,8 @@ comments: false
 
 合的过程：比较两个队列（两个队列已各自排好序）的队首元素，将小的从该队列中移除并插入到新队列的第一个位置，然后在比较两队列的首元素大小，将小的从该队列移除并将其添加到新队列上次添加的元素的后面，重复上述步骤直到有一个队列为空。最后将不为空的队列剩下所有的元素依次添加到新队列的最后，新队列则为一个已排序的队列。
 
+<!--more-->
+
 # 排序示例 #
 
 对序列｛3, 4, 63, 2, -9, 0, 1, 32, -2｝进行排序。
